[tool.poetry]
name = "pypda"
version = "0.4.1"
description = "A Pythonic toolkit to generate synthetic blood pressure waveforms based on principle of pulse decomposition analysis (PDA)."
authors = ["Tao-Yi Lee <taoyil@uci.edu>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
matplotlib = "^3.8.2"
numpy = "^1.26.3"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"

[tool.poetry.scripts]
pypda = 'pypda.cli:cli'

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
